--- a/src/components/radio/radio.css
+++ b/src/components/radio/radio.css
@@ -36,7 +36,8 @@
   justify-content: center;
   width: var(--ts-radio-size);
   height: var(--ts-radio-size);
-  border: 1.5px solid var(--ts-radio-border-color);
+  box-sizing: border-box;
+  border: 2px solid var(--ts-radio-border-color);
   border-radius: 50%;
   background-color: var(--ts-color-bg-elevated);
   transition:
